[package]
name = "mapgen-2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-ord = "*"
glam = "*"
kd-tree = "*"
ndarray = "*"
ndrustfft = "*"
num = "*"
num-traits = "*"
num-derive = "*"
priority-queue = "*"
rand = "*"
typenum = "*"
counter = "*"

[dev-dependencies]
image = "*"
num-derive = "*"
rand = { version = "*", features = ["small_rng"] }
